fixed overlapping issue

--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@ body{
   color:black;
 }
 
+.navbar{
+  z-index: 10;
+}
+
 .menu-options, .option {
   list-style-type: none;
   display: flex;
@@ -18,6 +22,7 @@ body{
   padding: 5px;
   overflow: hidden;
   color:black;
+  z-index: 1;
 }
 .option{
   float: left;
@@ -29,6 +34,7 @@ body{
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+  cursor: pointer;
 }
 .navbarlink:hover{
   background-color: rgb(65, 224, 33);
